# rust-brighton-embedded-day-5

./: Cargo.toml  README.md  openocd.cfg
.cargo/: config
src/: main.rs
