[package]
authors = ["Tim Small <tim@seoss.co.uk>"]
edition = "2018"
readme = "README.md"
name = "rust-brighton-embedded-day-5"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
cortex-m-semihosting = "0.3.3"
panic-halt = "0.2.0"
stm32f4xx-hal = { version = "0.6.0", features = ["stm32f411"]}

smart-leds-trait = {git = "https://github.com/smart-leds-rs/smart-leds-trait"}
smart-leds = {git = "https://github.com/smart-leds-rs/smart-leds"}
ws2812-spi = {git = "https://github.com/smart-leds-rs/ws2812-spi-rs"}
ws2812-timer-delay = {git = "https://github.com/smart-leds-rs/ws2812-timer-delay-rs", features = ["slow"]}

# this lets you use `cargo fix`!
[[bin]]
name = "rust-brighton-embedded-day-5"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
